--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,4 @@ wp-content/w3tc-config/
 wp-content/advanced-cache.php
 mysql_dumps/backup.sh
 old_site/
-wp-content/themes/point-child/fonts/LeagueGothic*
+wp-content/themes/point-child/fonts/
